# blog-v2

./: .gitignore  AGENTS.md  LICENSE  decisions.md  pyproject.toml  readme.md
.github/: dependabot.yml
.github/workflows/: gh-pages.yml  quality.yml  security-scans.yml  workflow-lint.yml
content/pages/: about.md
content/sections/: library.md  studio.md
docs/operating/: best_practices.md  expose_extensions.md  exposed_contracts.md  exposed_observability.md  mrl_reference.md  skills_workflow.md
docs/packs/: terraform_aws_environment.md
docs/semantics/: domain_background_knowledge.md  model_hypothesis.md
docs/slices/: 2026-04-16-entry-metadata-bootstrap.md  2026-04-16-feed-autodiscovery-bootstrap.md  2026-04-16-footer-attribution-bootstrap.md  2026-04-16-gh-pages-reset.md  2026-04-16-homepage-editorial-bootstrap.md  2026-04-16-library-taxonomy-bootstrap.md  2026-04-16-markdown-content-bootstrap.md  2026-04-16-narrative-container-content-bootstrap.md  2026-04-16-open-graph-bootstrap.md  2026-04-16-publication-metadata-bootstrap.md  2026-04-16-rss-chrome-bootstrap.md  2026-04-16-saga-navigation-bootstrap.md  2026-04-16-search-index-bootstrap.md  2026-04-16-section-content-bootstrap.md  2026-04-16-section-hubs-bootstrap.md  2026-04-16-shared-footer-bootstrap.md  2026-04-16-shared-site-chrome-bootstrap.md  2026-04-16-site-identity-assets-bootstrap.md  2026-04-17-404-noindex-bootstrap.md  2026-04-17-404-page-bootstrap.md  2026-04-17-404-search-recovery-bootstrap.md  2026-04-17-archives-bootstrap.md  (+68 more)
scripts/: gh-pages-bootstrap  mrl-build  mrl-refine  mrl-serve
(+250 files in other folders)
