[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blog-v2"
version = "0.1.0"
description = "Static-first successor to the Wasting No Time blog"
requires-python = ">=3.12"
license = { text = "MPL-2.0" }
dependencies = []

[tool.setuptools]
license-files = ["LICENSE", "LICENSES/MPL-2.0.txt", "LICENSES/CC-BY-NC-SA-4.0.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
